# brachion

./: .gitignore  docker-compose.yml  mahjong.yaml
backend/api/: db.py  env.py  mahjong.yaml  main.py  pyproject.toml
backend/api/cruds/: room.py  user.py
backend/api/models/: player.py  user.py
backend/api/routers/: game.py  room.py  user.py
backend/api/routers/majan/: game.py  janshi.py  taku.py
backend/api/schemas/: player.py  user.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/@types/: index.d.ts
frontend/src/components/: AuthContext.tsx  Login.tsx  ProtectRoute.tsx  Register.tsx  Room.tsx
frontend/src/components/game/: Aciton.tsx  Game.tsx  GameRoom.tsx  Hand.tsx  LostPi.tsx
frontend/src/components/game_test/: BinaryMahjung.tsx
frontend/src/components/hands/: Hands.tsx  handsUtil.ts
frontend/src/components/mahjong/: OpenDialogButton.css  OpenDialogButton.tsx  Pai.tsx
frontend/src/components/room/: MatchingRoom.tsx  Room.css  Room.tsx  RoomForm.tsx  RoomListItem.tsx
frontend/src/pages/: GamePage.css  GamePage.tsx  HomePage.css  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/utils/: roomApi.ts  theme.ts  use.ts  useWebScoket.ts
mysql/init/: init.sql
wiki/: Dockerfile  package-lock.json  vite.config.ts
wiki/src/: global.css
wiki/src/components/binary/: binary.tsx  style.css
wiki/src/components/rule/: rule.tsx  style.css
wiki/src/components/title/: style.css  title.tsx
wiki/src/routes/: index.tsx
