[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "router>=0.1",
    "routers>=0.10.1",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.30",
    "python-jose>=3.4.0",
    "passlib>=1.7.4",
    "PyJWT>=2.8.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.3.0",
]
